--- a/styles/main.css
+++ b/styles/main.css
@@ -1250,7 +1250,7 @@ button[aria-label]::before {
   display: grid;
   row-gap: clamp(0.375rem, 0.2156862745rem + 0.6535947712vw, 1rem);
 }
-.card__preview-info:has(.card__rating-view) {
+.card__preview-info:has(.card__raiting-view) {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -2277,6 +2277,9 @@ button[aria-label]::before {
   .blog-details__main {
     --initialMaxHeight: 41.8125rem;
   }
+}
+.blog-details__summary {
+  font-size: clamp(0.875rem, 0.8112745098rem + 0.2614379085vw, 1.125rem);
 }
 
 @media (width <= 90.06125rem) {
