--- a/styles/blocks/_card.scss
+++ b/styles/blocks/_card.scss
@@ -178,6 +178,10 @@
             color: inherit;
         }
 
+        &-title {
+            font-size: fluid(18, 14);
+        }
+
         &-link {
             grid-area: link;
         }
