--- a/styles/blocks/_blog-details.scss
+++ b/styles/blocks/_blog-details.scss
@@ -14,7 +14,7 @@
             @include tablet {
                 background:
             linear-gradient(180deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 0.88) 75.52%, #141414 100%),
-            url(/images/blog/blog-banner-background-mobile.webp) center/cover no-repeat;
+            url('../images/blog/blog-banner-background-mobile.webp') center/cover no-repeat;
             }
     }
 
