--- a/styles/main.css
+++ b/styles/main.css
@@ -2175,7 +2175,7 @@ button[aria-label]::before {
 }
 @media (width <= 63.99875rem) {
   .blog-details__banner {
-    background: linear-gradient(180deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 0.88) 75.52%, #141414 100%), url(/images/blog/blog-banner-background-mobile.webp) center/cover no-repeat;
+    background: linear-gradient(180deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 0.88) 75.52%, #141414 100%), url('../images/blog/blog-banner-background-mobile.webp') center/cover no-repeat;
   }
 }
 .blog-details__title {
